blue-squares section

--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&family=VT323&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/all.css">
     <title>Document</title>
 </head>
 <body>
+    <!--header-->
     <header>
         <section class="header">
             <div class="logo-and-nav container">
@@ -31,7 +33,48 @@
     </header>
 
     <main>
+        <!--blue squares-->
+        <section class="blue-squares container">
+            <div class="square-container">
 
+                <div class="col rectangle">
+                    <div class="rectangle-text">
+                        <h2>Get a demo application</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat obcaecati dicta sint deleniti facere dolorem, dolores consequatur beatae perspiciatis eos est tempore tempora perferendis distinctio necessitatibus assumenda voluptate minima delectus?</p>
+                        <div class="app-store-button-container">
+                            <button class="app-store-button">
+                                <i class="fa-brands fa-2x fa-apple"></i>
+                                <h3>App Store</h3>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="rectangle-img">
+                        <img src="img/phone.png">
+                    </div>
+                </div>
+
+                <div class="col">
+                    <i class="fas fa-5x fa-file-code"></i>
+                    <h2>Clean Code</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa in at odio fugiat architecto, consectetur fuga quo minus totam illum laboriosam asperiores error adipisci corporis quam pariatur id atque commodi!</p>
+                </div>
+                <div class="col">
+                    <i class="fas fa-5x fa-file-code"></i>
+                    <h2>Clean Code</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa in at odio fugiat architecto, consectetur fuga quo minus totam illum laboriosam asperiores error adipisci corporis quam pariatur id atque commodi!</p>
+                </div>
+                <div class="col">
+                    <i class="fas fa-5x fa-file-code"></i>
+                    <h2>Clean Code</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa in at odio fugiat architecto, consectetur fuga quo minus totam illum laboriosam asperiores error adipisci corporis quam pariatur id atque commodi!</p>
+                </div>
+                <div class="col">
+                    <i class="fas fa-5x fa-file-code"></i>
+                    <h2>Clean Code</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa in at odio fugiat architecto, consectetur fuga quo minus totam illum laboriosam asperiores error adipisci corporis quam pariatur id atque commodi!</p>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
