--- a/index.html
+++ b/index.html
@@ -75,6 +75,72 @@
                 </div>
             </div>
         </section>
+
+        <!--planning-development-->
+        <section class="planning-development">
+            <div class=" planning-development-container container-smaller">
+                <div class="planning">
+                    <img src="img/planning1.png">
+                    <h2>Strategic Planning</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet neque alias explicabo, optio reprehenderit quos sunt, autem eius voluptate aspernatur labore ipsum cupiditate? Dolorem placeat iusto minima quam nulla nesciunt.</p>
+                </div>
+                <div class="development">
+                    <img src="img/planning2.png">
+                    <h2>App Development</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet neque alias explicabo, optio reprehenderit quos sunt, autem eius voluptate aspernatur labore ipsum cupiditate? Dolorem placeat iusto minima quam nulla nesciunt.</p>
+                    <i class="fa-solid fa-4x fa-circle-arrow-down"></i>
+                </div>
+            </div>
+
+        </section>
+
+        <!--section-->
+        <section class="testimonials">
+            <div class="testimonials-container container">
+                <p>TESTIMONIALS</p>
+                <h2>We are commited expert partners</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio quo nihil fugiat! Eveniet laboriosam dolore quasi dolorum ea ad atque, aperiam fuga vitae nulla magni accusamus sunt iusto autem eaque.</p>
+                <div class="testimonial-card">
+                    <div class="testimonial-img">
+                        <img src="img/testimonial1.jpg">
+                    </div>
+                    <div class="testimonial-text">
+                        <q>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, ad. Suscipit reprehenderit magnam quisquam aspernatur, deleniti temporibus impedit facilis enim ratione libero, expedita ad fugiat quos sunt quo quam exercitationem.</q>
+                        <p>NAT REYNOLDS</p>
+                    </div>
+                </div>
+
+                <div class="testimonial-card">
+                    <div class="testimonial-img">
+                        <img src="img/testimonial1.jpg">
+                    </div>
+                    <div class="testimonial-text">
+                        <q>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, ad. Suscipit reprehenderit magnam quisquam aspernatur, deleniti temporibus impedit facilis enim ratione libero, expedita ad fugiat quos sunt quo quam exercitationem.</q>
+                        <p>NAT REYNOLDS</p>
+                    </div>
+                </div>
+
+                <div class="testimonial-card">
+                    <div class="testimonial-img">
+                        <img src="img/testimonial1.jpg">
+                    </div>
+                    <div class="testimonial-text">
+                        <q>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, ad. Suscipit reprehenderit magnam quisquam aspernatur, deleniti temporibus impedit facilis enim ratione libero, expedita ad fugiat quos sunt quo quam exercitationem.</q>
+                        <p>NAT REYNOLDS</p>
+                    </div>
+                </div>
+
+                <div class="testimonial-card">
+                    <div class="testimonial-img">
+                        <img src="img/testimonial1.jpg">
+                    </div>
+                    <div class="testimonial-text">
+                        <q>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, ad. Suscipit reprehenderit magnam quisquam aspernatur, deleniti temporibus impedit facilis enim ratione libero, expedita ad fugiat quos sunt quo quam exercitationem.</q>
+                        <p>NAT REYNOLDS</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
