--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
         </section>
 
-        <!--section-->
+        <!--testimonials-->
         <section class="testimonials">
             <div class="testimonials-container container">
                 <p>TESTIMONIALS</p>
@@ -141,10 +141,89 @@
                 </div>
             </div>
         </section>
+
+        <!--benefits-->
+        <section class="benefits">
+            <div class="benefits-wrapper container">
+                <h2>Benefits of working with us</h2>
+                <div class="benefits-cards-container">
+                    <div class="benefit-card">
+                        <p>01</p>
+                        <p>High Quality</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut eligendi veniam, suscipit provident debitis maiores pariatur, ipsum consectetur, aliquid deserunt ipsa earum totam. Nostrum labore quia itaque nihil, ipsum pariatur!</p>
+                        <button>more</button>
+                    </div>
+                    <div class="benefit-card">
+                        <p>01</p>
+                        <p>High Quality</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut eligendi veniam, suscipit provident debitis maiores pariatur, ipsum consectetur, aliquid deserunt ipsa earum totam. Nostrum labore quia itaque nihil, ipsum pariatur!</p>
+                        <button>more</button>
+                    </div>
+                    <div class="benefit-card">
+                        <p>01</p>
+                        <p>High Quality</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut eligendi veniam, suscipit provident debitis maiores pariatur, ipsum consectetur, aliquid deserunt ipsa earum totam. Nostrum labore quia itaque nihil, ipsum pariatur!</p>
+                        <button>more</button>
+                    </div>
+                    <div class="benefit-card">
+                        <p>01</p>
+                        <p>High Quality</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut eligendi veniam, suscipit provident debitis maiores pariatur, ipsum consectetur, aliquid deserunt ipsa earum totam. Nostrum labore quia itaque nihil, ipsum pariatur!</p>
+                        <button>more</button>
+                    </div>
+                    <div class="benefit-card">
+                        <p>01</p>
+                        <p>High Quality</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut eligendi veniam, suscipit provident debitis maiores pariatur, ipsum consectetur, aliquid deserunt ipsa earum totam. Nostrum labore quia itaque nihil, ipsum pariatur!</p>
+                        <button>more</button>
+                    </div>
+                    <div class="benefit-card">
+                        <p>01</p>
+                        <p>High Quality</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut eligendi veniam, suscipit provident debitis maiores pariatur, ipsum consectetur, aliquid deserunt ipsa earum totam. Nostrum labore quia itaque nihil, ipsum pariatur!</p>
+                        <button>more</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!--about us-->
+        <section class="about-us">
+            <div class="about-us-wrapper container">
+                <div class="about-us-text">
+                    <h2>About Us</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam alias aut laborum assumenda dignissimos repudiandae ut perspiciatis at doloribus fugit! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium aliquam eveniet culpa odio vero ducimus illo recusandae magnam quasi sint dolor officia reiciendis minima molestias aperiam fuga quidem explicabo consequatur aut at neque, minus dolores quaerat. Quasi animi accusamus quibusdam ex maxime minus veritatis voluptatem eos rem, architecto iusto dolore!</p>   
+                </div>
+                <div class="about-us-img-and-text">
+                    <div class="about-us-img-container">
+                        <img src="img/about.jpg">
+                        <i class="fa-solid fa-quote-left"></i>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt impedit, adipisci quaerat, nulla culpa quas nesciunt inventore delectus suscipit quia maxime, ullam esse ad est.</p>
+                        <button>Find me on Linkedin</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!--get-started-->
+        <section class="get-started">
+            <div class="get-started-wrapper container">
+                <p>GET STARTED</p>
+                <h2>Simple, Transparent Pricing</h2>
+                <p>It's Free!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, mollitia. Eveniet beatae enim temporibus similique.</p>
+                <button>Get Started</button>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, maiores!</p>
+            </div>
+        </section>
+
     </main>
 
     <footer>
-
+        <div class="footer">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi dolores sapiente impedit soluta dicta debitis reprehenderit quidem. Recusandae, sunt officiis?</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam, aspernatur?</p>
+        </div>
     </footer>
 </body>
 </html>
